# Image_Processor

./: CMakeLists.txt  README.md  README_MY.md  image_processor.cpp
include/bmp/: BMP.h  Image.h
include/controller/: ImageProcessorController.h
include/filters/: CropFilter.h  EdgeDetectionFilter.h  Filter.h  GaussianBlurFilter.h  GrayscaleFilter.h  NegativeFilter.h  PixelationFilter.h  SharpeningFilter.h
source/bmp/: BMP.cpp  Image.cpp
source/controller/: ImageProcessorController.cpp
source/filters/: CropFilter.cpp  EdgeDetectionFilter.cpp  GaussianBlurFilter.cpp  GrayscaleFilter.cpp  NegativeFilter.cpp  PixelationFilter.cpp  SharpeningFilter.cpp
tests/: BmpTest.cpp  FilterTest.cpp  ImageTest.cpp  MainTest.cpp  PixelTest.cpp
